French translation: minor fix

--- a/fr/kicad.po
+++ b/fr/kicad.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: kicad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-11 17:48+0200\n"
-"PO-Revision-Date: 2018-07-11 17:49+0200\n"
+"PO-Revision-Date: 2018-07-15 11:42+0200\n"
 "Last-Translator: \n"
 "Language-Team: jp-charras\n"
 "Language: fr_FR\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Basepath: f:/kicad-launchpad/git_testing\n"
 "X-Poedit-KeywordsList: _;_HKI\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.0.9\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: pcbnew\n"
@@ -14874,7 +14874,7 @@ msgstr "Résistivité:"
 
 #: pcb_calculator/dialogs/pcb_calculator_frame_base.cpp:305
 msgid "Ohm-meter"
-msgstr "Ohm par mètre"
+msgstr "Ohm - mètre"
 
 #: pcb_calculator/dialogs/pcb_calculator_frame_base.cpp:328
 msgid "External layer traces:"
@@ -15549,7 +15549,7 @@ msgid ""
 "(Ohm*meter)"
 msgstr ""
 "Résistivité électrique ou la résistance électrique  specifique du conducteur "
-"(Ohm*meter)"
+"(Ohm*metre)"
 
 #: pcb_calculator/transline_ident.cpp:156
 msgid "Frequency of the input signal"
