--- a/en/kicad.po
+++ b/en/kicad.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: KiCad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-12 17:53+0200\n"
-"PO-Revision-Date: 2018-07-12 17:54+0200\n"
+"PO-Revision-Date: 2018-07-15 17:07+0200\n"
 "Last-Translator: Simon Richter <Simon.Richter@hogyros.de>\n"
 "Language-Team: Simon Richter <Simon.Richter@hogyros.de>\n"
 "Language: en_US\n"
@@ -22594,7 +22594,7 @@ msgstr "Track clearances"
 #: pcbnew/drc.cpp:1035
 #, c-format
 msgid "\"%s\" is on a disabled layer"
-msgid "“%s” is on a disabled layer"
+msgstr "“%s” is on a disabled layer"
 
 #: pcbnew/drc.cpp:1261
 #, c-format
